--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,11 +1,16 @@
 {
   "short_name": "JWTKit",
-  "name": "JWTKit - JWT Analyzer & Attacker",
+  "name": "JWTKit - JWT Analysis & Attack Tool",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logo.svg",
+      "type": "image/svg+xml",
+      "sizes": "120x120"
     },
     {
       "src": "logo192.png",
@@ -20,6 +25,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#4361ee",
   "background_color": "#ffffff"
-} 
+}
