chore: add author information to README and package.json files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,11 @@
     "name": "jwtkit",
     "version": "0.1.0",
     "private": true,
+    "author": {
+        "name": "Eshanized",
+        "email": "m.eshanized@gmail.com",
+        "url": "https://github.com/eshanized"
+    },
     "dependencies": {
       "@testing-library/jest-dom": "^5.16.5",
       "@testing-library/react": "^13.4.0",
