--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@types/file-saver": "^2.0.7",
         "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
+        "diff": "^7.0.0",
         "file-saver": "^2.0.5",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
