--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
-        "react-dom": "^19.1.0",
-        "react-router-dom": "^7.5.1",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
+        "react-toastify": "^11.0.5",
         "recharts": "^2.15.3",
         "web-vitals": "^4.2.4"
     },
@@ -50,6 +51,6 @@
         ]
     },
     "devDependencies": {
-        "tailwindcss": "^4.1.4"
+        "tailwindcss": "^3.3.3"
     }
 }
