feat: enhance frontend with new tools, improved styles, and dark mode support
- Added new tools: Algorithm Confusion, Brute Force Attack, Key Injection, JWKS Spoofer, and Expiration Bypass.
- Integrated Material-UI for consistent styling and dark mode functionality.
- Updated Dashboard and Sidebar components for better navigation and user experience.
- Enhanced JWT Decoder with improved decoding logic and UI elements.
- Introduced responsive design adjustments and custom scrollbar styles.
- Updated package.json with new dependencies for UI components and animations.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.0",
+    "@mui/material": "^5.13.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
+    "framer-motion": "^10.12.10",
+    "highlight.js": "^11.8.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
